{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 345,
  "lineage": "5362dd4a-cbcc-b7ea-b898-4ba111508b75",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01bfa3365b40e0402",
            "arn": "arn:aws:ec2:us-east-1:337270123558:elastic-ip/eipalloc-01bfa3365b40e0402",
            "domain": "vpc",
            "id": "eipalloc-01bfa3365b40e0402",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-168-121-222.compute-1.amazonaws.com",
            "public_ip": "35.168.121.222",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-EIP",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-EIP",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337270123558:internet-gateway/igw-08e50085930ae5d78",
            "id": "igw-08e50085930ae5d78",
            "owner_id": "337270123558",
            "region": "us-east-1",
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-vpc-0919537880131545c-IG",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-vpc-0919537880131545c-IG",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "vpc_id": "vpc-0919537880131545c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:337270123558:targetgroup/nginx-tgt/a82208b880ceded5",
            "arn_suffix": "targetgroup/nginx-tgt/a82208b880ceded5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:337270123558:targetgroup/nginx-tgt/a82208b880ceded5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-tgt",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-nginx-tgt",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-nginx-tgt",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0919537880131545c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:337270123558:targetgroup/nginx-tgt/a82208b880ceded5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:337270123558:targetgroup/tooling-tgt/140c932b4fa28c9b",
            "arn_suffix": "targetgroup/tooling-tgt/140c932b4fa28c9b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:337270123558:targetgroup/tooling-tgt/140c932b4fa28c9b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tooling-tgt",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-tooling-tgt",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-tooling-tgt",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0919537880131545c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:337270123558:targetgroup/tooling-tgt/140c932b4fa28c9b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:337270123558:targetgroup/wordpress-tgt/384ecaf69eb4ce75",
            "arn_suffix": "targetgroup/wordpress-tgt/384ecaf69eb4ce75",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:337270123558:targetgroup/wordpress-tgt/384ecaf69eb4ce75",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-tgt",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-wordpress-tgt",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-wordpress-tgt",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0919537880131545c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:337270123558:targetgroup/wordpress-tgt/384ecaf69eb4ce75"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01bfa3365b40e0402",
            "association_id": "eipassoc-04264edc7397086a9",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0bd3da6ccf6d7585c",
            "network_interface_id": "eni-0a6af5d6c4af52490",
            "private_ip": "172.16.3.189",
            "public_ip": "35.168.121.222",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07124a58d5a1fdf17",
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-NAT",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-NAT",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "vpc_id": "vpc-0919537880131545c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09e76542ecd3902741080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bd3da6ccf6d7585c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-09e76542ecd390274",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337270123558",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-09e76542ecd390274"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08e50085930ae5d78",
            "id": "r-rtb-0f837615899da29911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0f837615899da2991",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337270123558",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0f837615899da2991"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rtb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337270123558:route-table/rtb-09e76542ecd390274",
            "id": "rtb-09e76542ecd390274",
            "owner_id": "337270123558",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Private-Route-Table",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Private-Route-Table",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0919537880131545c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337270123558",
            "id": "rtb-09e76542ecd390274",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337270123558:route-table/rtb-0f837615899da2991",
            "id": "rtb-0f837615899da2991",
            "owner_id": "337270123558",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Public-Route-Table",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Public-Route-Table",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0919537880131545c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337270123558",
            "id": "rtb-0f837615899da2991",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5bdd3ef9a06fe0c",
            "region": "us-east-1",
            "route_table_id": "rtb-09e76542ecd390274",
            "subnet_id": "subnet-098083db880ef25c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e47f6c8a2e0f55e",
            "region": "us-east-1",
            "route_table_id": "rtb-09e76542ecd390274",
            "subnet_id": "subnet-00f999395e19a823c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034328de991c74510",
            "region": "us-east-1",
            "route_table_id": "rtb-09e76542ecd390274",
            "subnet_id": "subnet-05ca9280175c26e44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc72d7237bd6ba5b",
            "region": "us-east-1",
            "route_table_id": "rtb-09e76542ecd390274",
            "subnet_id": "subnet-0ada049e89adce0df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3cab541bd4be156",
            "region": "us-east-1",
            "route_table_id": "rtb-0f837615899da2991",
            "subnet_id": "subnet-07124a58d5a1fdf17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbe6452bcafe697f",
            "region": "us-east-1",
            "route_table_id": "rtb-0f837615899da2991",
            "subnet_id": "subnet-02f7f0d12f4fd18e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337270123558:security-group/sg-0c819ddc52f0bd076",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c819ddc52f0bd076",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "337270123558",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "bastion-sg",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "bastion-sg",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0919537880131545c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337270123558",
            "id": "sg-0c819ddc52f0bd076",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datalayer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337270123558:security-group/sg-046b10a12ba393222",
            "description": "Security group for data layer (EFS and RDS)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046b10a12ba393222",
            "ingress": [],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "337270123558",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0919537880131545c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337270123558",
            "id": "sg-046b10a12ba393222",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337270123558:security-group/sg-0cf51db2d80e7944f",
            "description": "Security group for external ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf51db2d80e7944f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "337270123558",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0919537880131545c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337270123558",
            "id": "sg-0cf51db2d80e7944f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337270123558:security-group/sg-024e1ed3a842a2a33",
            "description": "Security group for internal ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024e1ed3a842a2a33",
            "ingress": [],
            "name": "int-alb-sg",
            "name_prefix": "",
            "owner_id": "337270123558",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0919537880131545c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337270123558",
            "id": "sg-024e1ed3a842a2a33",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337270123558:security-group/sg-0d917d681fcd3fadf",
            "description": "Security group for nginx reverse proxy",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d917d681fcd3fadf",
            "ingress": [],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "337270123558",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-sg",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-sg",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0919537880131545c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337270123558",
            "id": "sg-0d917d681fcd3fadf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337270123558:security-group/sg-071de8e444afb6294",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071de8e444afb6294",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from bastion security group",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c819ddc52f0bd076"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "MySQL from webserver security group",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05828360c1800244c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "337270123558",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "rds-security-group",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "rds-security-group",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0919537880131545c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337270123558",
            "id": "sg-071de8e444afb6294",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337270123558:security-group/sg-05828360c1800244c",
            "description": "Security group for WordPress and Tooling servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05828360c1800244c",
            "ingress": [],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "337270123558",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0919537880131545c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337270123558",
            "id": "sg-05828360c1800244c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SSH from bastion",
            "from_port": 22,
            "id": "sgrule-3545761511",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d917d681fcd3fadf",
            "security_group_rule_id": "sgr-09d3203762c8c309a",
            "self": false,
            "source_security_group_id": "sg-0c819ddc52f0bd076",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTP from nginx",
            "from_port": 80,
            "id": "sgrule-4066205105",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-024e1ed3a842a2a33",
            "security_group_rule_id": "sgr-0dfea1567f1cf1a3a",
            "self": false,
            "source_security_group_id": "sg-0d917d681fcd3fadf",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "MySQL from bastion",
            "from_port": 3306,
            "id": "sgrule-893892772",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-046b10a12ba393222",
            "security_group_rule_id": "sgr-0bc841de7f97b802f",
            "self": false,
            "source_security_group_id": "sg-0c819ddc52f0bd076",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.datalayer-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "MySQL from webservers",
            "from_port": 3306,
            "id": "sgrule-2107698265",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-046b10a12ba393222",
            "security_group_rule_id": "sgr-028d7add9a321284e",
            "self": false,
            "source_security_group_id": "sg-05828360c1800244c",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "NFS from webservers",
            "from_port": 2049,
            "id": "sgrule-3999694035",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-046b10a12ba393222",
            "security_group_rule_id": "sgr-014798335b3de2b63",
            "self": false,
            "source_security_group_id": "sg-05828360c1800244c",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTP from external ALB",
            "from_port": 80,
            "id": "sgrule-2839443610",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d917d681fcd3fadf",
            "security_group_rule_id": "sgr-08e3096f86cceb900",
            "self": false,
            "source_security_group_id": "sg-0cf51db2d80e7944f",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTP from internal ALB",
            "from_port": 80,
            "id": "sgrule-1281949740",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-05828360c1800244c",
            "security_group_rule_id": "sgr-090f9f11eb54ccfe0",
            "self": false,
            "source_security_group_id": "sg-024e1ed3a842a2a33",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SSH from bastion",
            "from_port": 22,
            "id": "sgrule-3817311648",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-05828360c1800244c",
            "security_group_rule_id": "sgr-0cf2054918f9f6004",
            "self": false,
            "source_security_group_id": "sg-0c819ddc52f0bd076",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337270123558:subnet/subnet-098083db880ef25c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098083db880ef25c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337270123558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-0",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-0",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "vpc_id": "vpc-0919537880131545c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337270123558",
            "id": "subnet-098083db880ef25c8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337270123558:subnet/subnet-00f999395e19a823c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f999395e19a823c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337270123558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-1",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-1",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "vpc_id": "vpc-0919537880131545c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337270123558",
            "id": "subnet-00f999395e19a823c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337270123558:subnet/subnet-05ca9280175c26e44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ca9280175c26e44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337270123558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-2",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-2",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "vpc_id": "vpc-0919537880131545c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337270123558",
            "id": "subnet-05ca9280175c26e44",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337270123558:subnet/subnet-0ada049e89adce0df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ada049e89adce0df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337270123558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-3",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-3",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "vpc_id": "vpc-0919537880131545c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337270123558",
            "id": "subnet-0ada049e89adce0df",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337270123558:subnet/subnet-07124a58d5a1fdf17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07124a58d5a1fdf17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337270123558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-0",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-0",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "vpc_id": "vpc-0919537880131545c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337270123558",
            "id": "subnet-07124a58d5a1fdf17",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337270123558:subnet/subnet-02f7f0d12f4fd18e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f7f0d12f4fd18e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337270123558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-1",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-1",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "vpc_id": "vpc-0919537880131545c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337270123558",
            "id": "subnet-02f7f0d12f4fd18e5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337270123558:vpc/vpc-0919537880131545c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0ad948730362959e7",
            "default_route_table_id": "rtb-0526cb45bb1904067",
            "default_security_group_id": "sg-03d2bdbe0563d50bf",
            "dhcp_options_id": "dopt-0739a006a0206087e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0919537880131545c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0526cb45bb1904067",
            "owner_id": "337270123558",
            "region": "us-east-1",
            "tags": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-VPC",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Environment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-VPC",
              "Owner-Email": "briankipkiruimunyat@gmail.com"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "337270123558",
            "id": "vpc-0919537880131545c",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}